-enforces hard limit on img height to prevent broken css

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ card-body {
   page-break-inside: avoid;
   .uploaded-photo {
     max-width: 100%;
-    height: auto;
+    max-height: 500px;
     object-fit: contain;
   }
 }
